--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     width:100%;
     height:100%; 
 }
+::selection {
+    background-color: #F40009; 
+    color: #fff; 
+  }
 /* Font Classes */
 .poppins-thin {
     font-family: "Poppins", sans-serif;
