--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@
     padding: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 .nav{
  width: 100%; 
 }
 .main{
     width:100%;
     height:100%; 
+} 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 ::selection {
     background-color: #F40009; 
