--- a/style.css
+++ b/style.css
@@ -141,3 +141,28 @@ img {
   .faq-toggle .faq-icon {
     transition: transform 0.3s;
   }
+  /* Navbar */
+/* Initial Hamburger */
+/* Hamburger icon styles */
+.hamburger span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #F40009;
+  margin: 5px 0;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Transform to "X" */
+.hamburger.cross span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.cross span:nth-child(2) {
+  opacity: 0; /* Hide the middle bar */
+}
+
+.hamburger.cross span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
