--- a/style.css
+++ b/style.css
@@ -166,3 +166,20 @@ img {
   transform: rotate(-45deg) translate(5px, -5px);
 }
 
+/* Loader */
+#loader{
+  height: 100%;
+  width: 100%;
+  position: fixed; 
+  top: 0;
+  background-color: #F40009;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  gap: 10px;
+}
+#loader h3{
+  font-size: 2vw;
+}
